[package]
name = "cutcat"
version = "0.1.3"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
clap = { version = "3.1.12", features = ["derive"] }

[package.metadata.scripts]
    hello = "echo \"Hello World\""
    site  = "hugo -s site"